test/asm/invalid-format.err
error: invalid-format.asm(1):
    STRFMT: Invalid format spec for argument 2
error: invalid-format.asm(2):
    STRFMT: Invalid format spec for argument 2
error: invalid-format.asm(3):
    STRFMT: Invalid format spec for argument 2
error: invalid-format.asm(4):
    STRFMT: Invalid format spec for argument 2
error: invalid-format.asm(5):
    Fixed-point constant precision 0 invalid, defaulting to 16
error: invalid-format.asm(5):
    STRFMT: Invalid format spec for argument 2
error: invalid-format.asm(8):
    Invalid format spec '5d5'
error: invalid-format.asm(9):
    Invalid format spec 'xx'
error: invalid-format.asm(11):
    Formatting string with sign flag '+'
error: invalid-format.asm(12):
    Formatting string with padding flag '0'
error: invalid-format.asm(13):
    Formatting string with fractional width
error: invalid-format.asm(14):
    Formatting string with fractional precision
error: invalid-format.asm(16):
    Formatting type 'd' with exact flag '#'
error: invalid-format.asm(17):
    Formatting type 'd' with fractional width
error: invalid-format.asm(18):
    Formatting type 'd' with fractional precision
Assembly aborted with 15 errors!
